# konsultskillsGraphdatabas

./: .env.example  .gitignore  Makefile  README.md  check_import.py  docker-compose.yml  import_profiles.py  mattias larsen AI-transformation och implementering av generativ AI (GenAI) i stora organisationer.json  pyproject.toml  schema.json  wait_neo4j.py
src/konsultskills_graphdb/: __init__.py  import_profiles.py
